--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,29 +65,55 @@
 .sequenzer {
 
   display: flex;
+  column-gap: 15px;
 
   .step {
     width: 80px;
     height: auto;
+    //border-top: 10px solid transparent;
+    //padding-top: 10px;
+
+    .light {
+      width: 100%;
+      height: 20px;
+      background-color: transparent;
+      border-bottom: 5px solid transparent;
+    }
 
     &.disabled {
       opacity: 0.3;
     }
 
     .step-toggle {
-      background-color: #1a1a1a;
+      border-radius: 5px;
+      background-color: #252627;
       color: #8e9aa0;
       border: 1px solid #8e9aa0;
       height: 30px;
-
-      &.playing {
-        border-color: #5ca462;
-        border-top-width: 3px;
-        //height: 20px;
-      }
+      cursor: pointer;
 
       &.armed {
         background-color: #607d8b;
+      }
+    }
+
+    &.playing {
+      background: linear-gradient(180deg, rgba(43,65,66,1) 0%, rgba(44,46,47,1) 58%, rgba(37,38,39,1) 100%);
+      //border-top: 10px solid #2b4142;
+
+      .light {
+        background-color: #2b4142;
+        border-bottom-color: #252627;
+      }
+
+      .step-toggle {
+        border-color: #4f6e51;
+        background: #2c2e2f;
+        &.armed {
+          border-color: #4f8051;
+          border-width: 2px;
+          background-color: #7ecb81;
+        }
       }
     }
   }
