--- a/src/app/sequenzer/sequenzer.component.html
+++ b/src/app/sequenzer/sequenzer.component.html
@@ -3,25 +3,25 @@
     <div class="element">
       <h3>Sequenzer</h3>
       <div class="form-check">
-        <label class="form-check-label">Enable Sequenzer for Keyboard</label>
-        <input type="checkbox" class="form-check-input" [(ngModel)]="synthService.sequencerEnabled">
+        <label class="form-check-label" for="sequenzerKeyboardEnabled">Enable Sequenzer for Keyboard</label>
+        <input type="checkbox" id="sequenzerKeyboardEnabled" class="form-check-input" [(ngModel)]="synthService.sequencerEnabled">
       </div>
       <div class="row mb-3" *ngIf="!synthService.sequencerEnabled">
         <div class="col-6">
-          <select class="form-select" [(ngModel)]="synthService.currentNote">
-            <option [ngValue]="'C1'">C1</option>
-            <option [ngValue]="'C2'">C2</option>
-            <option [ngValue]="'C3'">C3</option>
-            <option [ngValue]="'C4'">C4</option>
-            <option [ngValue]="'C5'">C5</option>
-            <option [ngValue]="'C6'">C6</option>
-          </select>
+          <div class="row">
+            <div class="col-3">
+              <label class="form-label">Root Note</label>
+            </div>
+            <div class="col-9">
+              <select class="form-select" [(ngModel)]="synthService.sequencerRootNote">
+                <option *ngFor="let rootNote of rootNotes" [ngValue]="rootNote">{{rootNote}}</option>
+              </select>
+            </div>
+          </div>
         </div>
-        <div class="col-3">
-          <button class="btn btn-success" (click)="play()" [disabled]="isPlaying">Play Sequence</button>
-        </div>
-        <div class="col-3">
-          <button class="btn btn-danger" (click)="stop()">Stop Sequence</button>
+        <div class="col-6">
+          <button class="btn btn-success" *ngIf="!synthService.sequenzerPlaying" (click)="play()">Play Sequence</button>
+          <button class="btn btn-danger" *ngIf="synthService.sequenzerPlaying" (click)="stop()">Stop Sequence</button>
         </div>
       </div>
       <div class="row mb-3">
@@ -39,7 +39,7 @@
         <div class="col-6">
           <div class="row">
             <div class="col-6">
-              <label class="form-label">Interval</label>
+              <label class="form-label">Tempo</label>
               <select class="form-select" [(ngModel)]="synthService.sequencerInterval">
                 <option [ngValue]="'1n'">1n</option>
                 <option [ngValue]="'2n'">2n</option>
@@ -57,8 +57,9 @@
         </div>
       </div>
       <div class="sequenzer">
-        <div class="step" *ngFor="let step of synthService.sequencerSteps; let i = index" [ngClass]="{disabled: i+1 > synthService.sequencerActiveStepsCount}">
-          <div class="step-toggle" [ngClass]="{'playing': step.playing === true, 'armed': step.armed}" (click)="toggleArmed(i)">&nbsp;</div>
+        <div class="step" *ngFor="let step of synthService.sequencerSteps; let i = index" [ngClass]="{'playing': (stepPlaying === i) && synthService.sequenzerPlaying, disabled: i+1 > synthService.sequencerActiveStepsCount}">
+          <div class="light"></div>
+          <div class="step-toggle" [ngClass]="{'armed': step.armed}" (click)="toggleArmed(i)">&nbsp;</div>
           <div>
             <input class="form-range" data-orientation="vertical" type="range" min="0" max="1" step="0.1" [(ngModel)]="step.velocity">
             <p class="text-sm-center">{{step.velocity}}</p>
@@ -68,7 +69,7 @@
             <p class="text-sm-center">{{step.pitch}}</p>
           </div>
           <div>
-            <select class="form-select" [(ngModel)]="step.duration">
+            <select class="form-select-sm" style="width: 100%" [(ngModel)]="step.duration">
               <option [ngValue]="'1n'">1n</option>
               <option [ngValue]="'2n'">2n</option>
               <option [ngValue]="'4n'">4n</option>
