--- a/src/app/envelope/envelope.component.html
+++ b/src/app/envelope/envelope.component.html
@@ -3,19 +3,19 @@
   <div class="row">
     <div class="col-3">
       <label>Attack</label>
-      <input class="form-range" type="range" min="0" max="10" step="0.001" [(ngModel)]="attack" (change)="setAttack()">
+      <input class="form-range" type="range" min="0.001" max="1" step="0.001" [(ngModel)]="synth.envelope.attack">
     </div>
     <div class="col-3">
       <label>Decay</label>
-      <input class="form-range" type="range" min="0" max="10" step="0.001" [(ngModel)]="decay" (change)="setDecay()">
+      <input class="form-range" type="range" min="0.001" max="1" step="0.001" [(ngModel)]="synth.envelope.decay">
     </div>
     <div class="col-3">
       <label>Sustain</label>
-      <input class="form-range" type="range" min="0" max="1" step="0.01" [(ngModel)]="sustain" (change)="setSustain()">
+      <input class="form-range" type="range" min="0.01" max="1" step="0.01" [(ngModel)]="synth.envelope.sustain">
     </div>
     <div class="col-3">
       <label>Release</label>
-      <input class="form-range" type="range" min="0" max="10" step="0.001" [(ngModel)]="release" (change)="setRelease()">
+      <input class="form-range" type="range" min="0.001" max="10" step="0.001" [(ngModel)]="synth.envelope.release">
     </div>
   </div>
 </div>
