--- a/src/app/keyboard/keyboard.component.html
+++ b/src/app/keyboard/keyboard.component.html
@@ -5,11 +5,11 @@
     <div class="octave" *ngFor="let octave of octaves; let olst = last">
       <div class="octave-label">C{{octave}}</div>
         <div class="keys">
-          <div class="note" (mouseover)="mouseOver(note, octave)" (mouseout)="mouseOut()" (mousedown)="mouseDown(note, octave);" (mouseup)="mouseUp()" *ngFor="let note of notes; let lst = last" [ngClass]="{'sharp':( note.indexOf('#') >= 1), 'last':lst && olst, 'playing': ((synthService.currentNote === note + octave) && (msDwn|| synthService.sequenzerPlaying))  }">
+          <div class="note" (mouseover)="mouseOver(note, octave)" (mouseout)="mouseOut()" (mousedown)="mouseDown(note, octave);" (mouseup)="mouseUp()" *ngFor="let note of notes; let lst = last" [ngClass]="{'sharp':( note.indexOf('#') >= 1), 'last':lst && olst, 'playing': ((msDwn || synthService.sequenzerPlaying) && (currentNote === note + octave || lastNote === note + octave ))  }">
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="col-1 float-end"><button class="btn btn-primary" (click)="changeOctave(1)">&gt;&gt;</button></div>
+  <div class="col-1"><button class="btn btn-primary float-end" (click)="changeOctave(1)">&gt;&gt;</button></div>
 </div>
