removed knob test component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <input type="range" min="0" max="100" step="1" insKnob>
+  <!--<ins-knob-input></ins-knob-input>-->
   <p *ngIf="!supported">
     Web MIDI API is not supported by your browser
   </p>
