added LFO and Frequency Envelope

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
       <ins-phaser class="col" [phaser]="synthService.phaser"></ins-phaser>
       <ins-chorus class="col" [chorus]="synthService.chorus"></ins-chorus>
     </div>
+    <div class="row mb-3">
+      <ins-lfo class="col" [lfo]="synthService.lfo"></ins-lfo>
+    </div>
     <ins-sequenzer></ins-sequenzer>
     <ins-keyboard></ins-keyboard>
   </div>
