--- a/src/app/lfo/lfo.component.html
+++ b/src/app/lfo/lfo.component.html
@@ -5,5 +5,13 @@
       <label>Frequency</label>
       <input class="form-range" type="range" min="0" max="10" step="0.1" [(ngModel)]="lfo.frequency.value">
     </div>
+    <div class="col-3">
+      <label>Min {{lfo.min}}</label>
+      <input class="form-range" type="range" min="0" max="100" step="1" [(ngModel)]="lfo.min">
+    </div>
+    <div class="col-3">
+      <label>Max {{lfo.max}}</label>
+      <input class="form-range" type="range" min="0" max="100" step="1" [(ngModel)]="lfo.max">
+    </div>
   </div>
 </div>
